# PesquisaMercados2

./: pyproject.toml
backend/api/v1/: crawler.py
